--- a/AppUsers.Front/src/app/components/shared/sidebar/sidebar.component.html
+++ b/AppUsers.Front/src/app/components/shared/sidebar/sidebar.component.html
@@ -11,7 +11,7 @@
     <div class="link">
       <div class="content">
         <fa-icon [icon]="fonte.faUser"></fa-icon>
-        <div class="title">Usuários</div>
+        <div class="title" routerLink="/user">Usuários</div>
       </div>
     </div>
   </div>
