--- a/AppUsers.Front/src/app/components/home/user/user.component.html
+++ b/AppUsers.Front/src/app/components/home/user/user.component.html
@@ -46,18 +46,18 @@
   </div>
 
   <div class="col-12" *ngIf="editaValidacao">
-    <form [formGroup]="formUsuario" (ngSubmit)="editaUsuario(userEdicao)">
+    <form [formGroup]="formUsuario" (ngSubmit)="editaUsuario()">
       <div class="row">
         <div class="form-group col-6">
           <label for="nome">Nome</label>
-          <input type="text" class="form-control" formControlName="nome" [(ngModel)]="userEdicao.nome">
+          <input type="text" class="form-control" formControlName="nome">
           <div class="alert alert-warning" *ngIf="form.nome.touched && form.nome.errors?.required">
             Por favor, informe seu nome.
           </div>
         </div>
         <div class="form-group col-6">
           <label for="sobrenome">Sobrenome</label>
-          <input type="text" class="form-control" formControlName="sobrenome" [(ngModel)]="userEdicao.sobrenome">
+          <input type="text" class="form-control" formControlName="sobrenome">
           <div class="alert alert-warning" *ngIf="form.sobrenome.touched && form.sobrenome.errors?.required">
             Por favor, informe seu sobrenome.
           </div>
@@ -66,7 +66,7 @@
       <div class="row">
         <div class="form-group col-12">
           <label for="email">Email</label>
-          <input type="email" class="form-control" formControlName="email" placeholder="name@example.com" [(ngModel)]="userEdicao.email">
+          <input type="email" class="form-control" formControlName="email" placeholder="name@example.com">
           <div class="alert alert-warning" *ngIf="form.email.touched && form.email.errors?.required">
             Por favor, informe seu email.
           </div>
@@ -78,7 +78,7 @@
       <div class="row">
         <div class="form-group col-6">
           <label for="dataNascimento">Data de Nascimento</label>
-          <input type="date" class="form-control" formControlName="dataNascimento" [(ngModel)]="userEdicao.dataNascimento" (blur)="dateValidator(form.dataNascimento.value)">
+          <input type="date" class="form-control" formControlName="dataNascimento" (blur)="dateValidator(form.dataNascimento.value)">
           <div class="alert alert-warning" *ngIf="form.dataNascimento.touched && form.dataNascimento.errors?.required">
             Por favor, informe sua Data de Nascimento.
           </div>
@@ -91,7 +91,6 @@
           <select
             class="form-control"
             formControlName="escolaridade"
-            [(ngModel)]="userEdicao.escolaridade"
             >
             <option *ngFor="let escolaridade of escolaridades" [value]="escolaridade.valor">{{ escolaridade.classificacao }}</option>
           </select>
